--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,7 +122,7 @@ margin-right: auto;
 }
 .register{
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
